config rspec capybara redis faraday sidekiq vcr selenium simplecov rubocop factory_bot

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <ul>
+      <li><%= link_to 'Relatórios', reports_path %></li>
+    </ul>
     <%= yield %>
   </body>
 </html>
